--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies=[
         'torch>=1.9.0',
         'scikit-learn>=0.24.2,<1.2',
         'pyyaml>=5.4.1',
-        'numpy>=1.21.2',
+        'numpy>=1.21.2,<2.0',
         'requests>=2.23.0',
         'gpytorch>=1.5.0',
         'configspace>=0.4.21',
