--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ description = "PFNs made ready for BO"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies=[
-        'torch>=2.5',
+        'torch>=2.2',
         'scikit-learn>=0.24.2',
         'pyyaml>=5.4.1',
         'numpy>=1.21.2',
@@ -26,6 +26,7 @@ dependencies=[
         'tqdm>=4.62.1',
         'botorch>=0.7.2',
         'matplotlib>=3.10.1',
+        'einops>=0.8.1',
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
