--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "macos-14"]
+        os: ["ubuntu-latest"]
         python-version: ["3.13"]
     env:
       # `uv pip ...` requires venv by default. This skips that requirement.
