exclude checkpoint from pip

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pfns"
-version = "0.3.0"
+version = "0.3.1"
 authors = [
 {name="Samuel Muller"},
 {name="Matthias Feurer"},
@@ -50,6 +50,7 @@ benchmarks = [
 exclude = [
   "*.gz",
   "*.pt",
+  "*.cpkt",
 ]
 
 [project.urls]
