--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,6 @@ dependencies=[
         'gpytorch>=1.5.0',
         'configspace>=0.4.21',
         'tqdm>=4.62.1',
-        'botorch',
         'matplotlib>=3.10.1',
         'einops>=0.8.1',
         'pre-commit>=3.5.0',
@@ -44,6 +43,9 @@ classifiers = [
 [project.optional-dependencies]
 benchmarks = [
     "bayesmark>=0.0.8",
+]
+priors = [
+    "botorch",
 ]
 
 [tool.hatch.build]
